<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_secondary"
    android:padding="@dimen/dp16">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_stream_link"
        app:titleCentered="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:hint="@string/hint_stream_link"
        app:endIconMode="clear_text"
        app:helperText="@string/hint_stream_link_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:hint="@string/hint_stream_header"
        app:endIconMode="clear_text"
        app:helperText="@string/hint_stream_header_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:minLines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:minWidth="@dimen/dp40"
        android:text="@string/action_confirmed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_header" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:minWidth="@dimen/dp40"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_confirmed"
        app:layout_constraintTop_toTopOf="@+id/button_confirmed" />

</androidx.constraintlayout.widget.ConstraintLayout>