<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_media">

    <fragment
        android:id="@+id/navigation_media"
        android:name="me.lingci.dy.player.ui.media.MediaFragment"
        android:label="@string/title_media"
        tools:layout="@layout/fragment_media" />

    <fragment
        android:id="@+id/navigation_source"
        android:name="me.lingci.dy.player.ui.source.SourceFragment"
        android:label="@string/title_source"
        tools:layout="@layout/fragment_source" />

    <fragment
        android:id="@+id/navigation_tool"
        android:name="me.lingci.dy.player.ui.tool.SettingFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_setting" />

</navigation>