<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp16"
    android:paddingBottom="@dimen/dp16">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:gravity="center_vertical"
        android:text="@string/hint_timer_close"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle"/>

    <LinearLayout
        android:id="@+id/layout_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_timer_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_off"/>

        <TextView
            android:id="@+id/tv_timer_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_10_min"/>

        <TextView
            android:id="@+id/tv_timer_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_20_min"/>

        <TextView
            android:id="@+id/tv_timer_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_30_min"/>

        <TextView
            android:id="@+id/tv_timer_45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_45_min"/>

        <TextView
            android:id="@+id/tv_timer_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_60_min"/>

        <TextView
            android:id="@+id/tv_timer_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@color/accent_selector"
            android:text="@string/timer_custom"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
